--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: WorkMate
 description: Team BrainStormers
+author: Anjali Manoj, Gopika H, Sarath Mohan, A J Parvathi 
