--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_auth_ui: ^2.0.1
   flutter:
     sdk: flutter
+  percent_indicator: "^2.1.7+2"
+  table_calendar: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
